[package]
name = "main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/monte_carlo_pi/main.rs"

[dependencies]
num_cpus = "1.17.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"

# Profile for maximum runtime performance
[profile.release]
# Maximum optimization level
opt-level = 3
# Enable link-time optimization for whole-program optimization
lto = "fat"
# Set number of codegen units to 1 for better optimization (slower compile, faster runtime)
codegen-units = 1
# Enable panic unwinding for better debugging (can be disabled for tiny perf gain)
panic = "unwind"
# Strip debug symbols to reduce binary size
strip = true
# Enable overflow checks in release mode (slight perf cost but safer)
overflow-checks = false
# Disable debug assertions (they're already off in release)
debug-assertions = false
# Enable incremental compilation for faster rebuilds during development
incremental = false
