[project]
name = "testing-ground"
version = "0.1.0"
description = ""
authors = [
    {name = "Jim Fitzpatrick",email = "jimfity@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numba (>=0.61.2,<0.62.0)"
]

[tool.poetry]
packages = [{include = "testing_ground", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
